<resources>
    <string name="app_name">V Transfer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_splashscreen_fab_desc">change splashscreen</string>
    <string name="welcome_to">Welcome to</string>
    <string name="the_world">the world</string>
    <string name="where">where</string>
    <string name="security">security</string>
    <string name="is_sharing">is sharing</string>
    <string name="easy_come_amp_go"><![CDATA[Easy Come & Go]]></string>
    <string name="to_the_world_of_secure_and_easy_file_sharing">To the world of security and easy file sharing.</string>
    <string name="safe_amp_secure"><![CDATA[Safe & Secure]]></string>
    <string name="keep_your_files_safe_with_us">Keep your files safe with Us.</string>
    <string name="quick_and_swift">Quick and Swift</string>
    <string name="file_sharing_made_faster">File sharing made Faster!</string>
    <string name="illustration">illustration</string>
    <string name="on_boarding_large_text_transition_name">ONB_LARGE_TEXT</string>
    <string name="on_boarding_small_text_transition_name">ONB_SMALL_TEXT</string>
    <string name="on_boarding_image_transition_name">ONB_IMAGE</string>
    <string name="skip">Skip</string>
    <string name="back_button">back button</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="facebook_authentication">Facebook authentication</string>
    <string name="google_authentication">Google authentication</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="upload_a_profile_picture_optional">Upload a profile picture [Optional]</string>
    <string name="user_email">User Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_send_to">Please type the verification code send to</string>
    <string name="validate">VALIDATE</string>
    <string name="recently">Recently</string>
    <string name="added">Added</string>
    <string name="file_icon">File Icon</string>
    <string name="filter_icon">filter icon</string>
    <string name="search_file">search file</string>
    <string name="add_file">add file</string>
    <string name="profile_image">profile image</string>
    <string name="edit_profile_image">Edit profile image</string>
    <string name="search">Search</string>
    <string name="create_new_url">Create New Url</string>
    <string name="close">close</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="document">Document</string>
    <string name="filter_by_date">Filter By Date</string>
    <string name="currently_you_dont_have_any_file_add_file">No files yet uploaded\nAdd File</string>
    <string name="search_files">Search files</string>
    <string name="you_can_search_any_file_uploaded_any_time">You can search any file\nuploaded any time</string>
    <string name="upload_file">Upload file</string>
    <string name="you_can_upload_any_type_of_file">You can upload any type of file</string>
    <string name="or_you_can_filter_files_based_on_dates_they_were_uploaded">or you can filter files\nbased on dates they were uploaded</string>
    <string name="use_filters">Use filters</string>
    <string name="storage_used">Storage Used</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="mb">MB</string>
    <string name="default_click_count">50</string>
    <string name="title_domain">Domain</string>
    <string name="tick_mark">tick mark</string>
    <string name="illustration_icon">Illustration icon</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="custom_range">Custom Range</string>
    <string name="select_date_range">Select Date Range</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="drag_down_from_here">drag down from here</string>
    <string name="log_out">Log Out</string>
    <string name="uploaded">Uploaded</string>
    <string name="between">between</string>
    <string name="space">&#160;</string>
    <string name="resend">Resend</string>
    <string name="no_internet_message">Not connected to internet</string>
    <string name="incorrect_username_or_password">Incorrect Username or Password</string>
    <string name="drag_down_info">Drag down from here to see the live status of all the files uploading</string>
    <string name="file_meta_data_info">Recent uploading file appear here\nAdd file from home page</string>
    <string name="file_search_info">Your search result appear here\nEnter file name to search</string>
    <string name="empty_file_search_result">Oops!!\nNo file matching with that name</string>
    <string name="click_count">Click count</string>
    <string name="is_visible">Is Visible</string>
    <string name="submit">Submit</string>
    <string name="no_change">No change</string>
    <string name="delete">Delete</string>
</resources>